--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -119,7 +119,7 @@
 
 					<% @posts.each do | p | %>
 					<div class="posted">
-						<div class="card mt-2">
+						<div class="card ">
 							<div class="card-body">
 								<div class="photo-and-name">
 									<% if p.avatar.empty? %>
