added omniauth-authentication to devsie

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -38,7 +38,8 @@
 							<div class="card-body">
 
 								<!-- Button trigger modal -->
-								<button type="button" class="btn poster p-3" data-toggle="modal" data-target="#exampleModal">
+								<button type="button" class="btn poster p-3" data-toggle="modal"
+									data-target="#exampleModal">
 									What is on your mind ?
 								</button>
 							</div>
@@ -52,8 +53,8 @@
 
 
 					<!-- Modal -->
-					<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-						aria-hidden="true">
+					<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog"
+						aria-labelledby="exampleModalLabel" aria-hidden="true">
 						<div class="modal-dialog" role="document">
 							<div class="modal-content">
 								<%= form_for(:post, url: posts_path) do |f| %>
