refator styling for the application

--- a/app/views/components/_signup_nav.html.erb
+++ b/app/views/components/_signup_nav.html.erb
@@ -1,5 +1,5 @@
-<nav class="d-flex fixed-top signup_navbar">
-  <a href="#">facebook</a>
+<nav class="d-flex fixed-top signup_navbar" id="navi">
+  <a href="#">Link up</a>
   <div class="ml-auto mr-5 mt-3 sign-in-form">
     <div id="signin-form-wrap">
       <%= form_for(resource, as: resource_name, url:
