--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -2,5 +2,9 @@
 @import "font-awesome";
 
 .navbar{
-    background: #0000b2;
+    background: #000000;
+    box-shadow: inset 0 0 10px #000000;
+}
+#navi{
+    box-shadow: inset 0 0 10px #000000;
 }
