--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -3,39 +3,37 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 body{
     margin-top: 80px;
+    background: #ffd700;
 }
 .layout{
     width: 100%;
     height: 800px;
     border: 1px solid red;
 }
-.fa-facebook-official{
-    color: #fff;
-}
 .sect{
     width: 100%;
     height: 200px;
-    border: 1px solid green;
+    border: 1px solid gold;
     border-radius: 5px;
+    box-shadow: inset 0 0 10px #000000;
 }
 img[alt='oops']{
     width: 50px;
     height: 100px;
     border: 1px solid gold;
-    // border-radius: 100%;
-}
-body{
-    background: #f0f0f0;
 }
 .suggested-wrap{
-    border: 1px solid  #f0f0f0;
+    border: 1px solid gold;
+   box-shadow: inset 0 0 10px #000000; 
 }
 .suggested-likes{
     height: 35px;
-    border: 1px solid  #f0f0f0;
+    border: 1px solid goldenrod;
+   box-shadow: inset 0 0 10px #000000; 
 }
 .suggested-page-image{
-   border: 1px solid #fff; 
+   border: 1px solid goldenrod;
+   box-shadow: inset 0 0 10px #000000; 
 }
 
 img[alt='suggested-page-image']{
@@ -48,7 +46,8 @@ img[alt='suggested-page-image-logo']{
 }
 .fa-plus{
     height: 22px;
-    border: 1px solid silver;
+    border: 1px solid goldenrod;
+    box-shadow: inset 0 0 10px #000000; 
 }
 .instant-game{
     border: 1px solid silver;
@@ -60,7 +59,8 @@ img[alt='suggested-page-image-logo']{
 
 .chats{
     height: 400px;
-    border: 1px solid silver;
+    border: 1px solid goldenrod;
+    box-shadow: inset 0 0 10px #000000;
 }
 .poster{
     width: 100%;
@@ -102,8 +102,13 @@ img[alt='name']{
     height: 30px;
     border-radius: 20%;
 }
-.commentary-box{
-}
 .right-comment{
     width: 90%;
+}
+.brand{
+    color: #f0f0f0;
+    font-family: cursive;
+    font-weight: 900;
+    padding: 5px;
+    font-size: 34px;
 }
