--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -12,7 +12,7 @@ img[alt="default_avatar"]{
 .signup_navbar{
     width: 100%;
     height: 82px;
-    background: #0000b2;
+    background: #000000;
 }
 .signup_navbar a{
     color: #fff;
@@ -51,7 +51,7 @@ small{
 }
 .one{
     height: 40px;
-    border-right: 1px solid rgb(97, 97, 187);
+    border-right: 1px solid goldenrod;
     padding: 15px;
 }
 .five{
@@ -61,7 +61,7 @@ small{
     width: 40px;
     height: 28px;
     border-radius: 50%;
-    background: #fff;
+    background: gold;
 }
 .left-nav-link{
     margin-left: 200px;
@@ -82,7 +82,7 @@ img[alt="user-pics-2"]{
 .profile-pic{
     width: 100px;
     height: 100px;
-    border: 1px solid silver;
+    border: 1px solid gold;
     transform: rotate(-10deg); 
     box-shadow: 0px 0px 20px 0px;
     transition-delay: 0.2s;
@@ -109,13 +109,13 @@ img[alt="user-pics-2"]{
     transform: translate(-14px,-3px);
     z-index: 1;
     font-weight: 700;
-    background: red;
+    background: gold;
     border-radius: 25%;
     color: white;
     padding: 0.5px 1.8px 0.5px 1.8px;
 }
 .notify-count-but{
-    background: #0000b2;
+    background: #000000;
     border: 0;
 }
 .notify-name{
@@ -128,4 +128,8 @@ img[alt='friend-pics']{
     width: 35px;
     height: 35px;
     border-radius: 100%;
+}
+.card{
+  background-color: goldenrod;
+  box-shadow: inset 0 0 10px #000000;
 }
