--- a/app/views/components/_navi.html.erb
+++ b/app/views/components/_navi.html.erb
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-expand-lg fixed-top navbar-light " id="nav">
-	<a href="<%= root_path%>" class="navbar-brand"><i class="fa fa-facebook-official fa-2x"></i></a>
+<nav class="navbar navbar-expand-lg fixed-top" id="navi">
+	<a href="<%= root_path%>" class="brand"><i>Link up</i></a>
 
 	<form class="form-inline" method='get' action="<%= search_path(:search) %>">
 		<div class="input-group">
