--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -30,10 +30,10 @@
 									What is on your mind ?
 								</button>
 							</div>
-							<div class="card-footer">
-								<img src="<%= asset_path('uploader.png')%>" alt="photo-upload" />
-								<img src="<%= asset_path('feeling.png')%>" alt="photo-upload" />
-								<img src="<%= asset_path('tag.png')%>" alt="photo-upload" />
+							<div class="card-footer d-flex justify-content-around">
+								<a href="#" class="text-light">🎥 Video/photo</a>
+								<a href="#" class="text-light">😃 Feeling</a>
+								<a href="#" class="text-light">👯 Tag friend</a>
 							</div>
 						</div>
 					</div>
@@ -76,34 +76,33 @@
 								<div class="photo-and-name">
 									<% if p.avatar.empty? %>
 
-<<<<<<< HEAD
-						<div class="card-footer d-flex justify-content-between">
-							<aside class="left">
-								<% if current_user.avatar.attached? %>
-								<%= image_tag current_user.avatar.reverse.first, class: "img-fluid profile-avatar" %>
-								<% else %>
-								<img src="<%= asset_path('default_avatar.png')%>" alt="default_avatar">
-								<% end %>
-							</aside>
-							<aside class="right">
-								<%= form_for(@comment, :url => comments_path,:remote => true )do | f | %>
-								<%= f.hidden_field :post_id, :value => "#{@post.id}" %>
-								<%= f.text_field :commentary, placeholder: "say something", class: 'form-control right-input' %>
-								<%= f.submit :send, class: 'd-none' %>
-								<% end %>
-							</aside>
-						</div><br>
-						<% @post.comments.each do | com | %>
-						<div class="commentary-box d-flex justify-content-between p-2">
+									<<<<<<< HEAD <div class="card-footer d-flex justify-content-between">
+										<aside class="left">
+											<% if current_user.avatar.attached? %>
+											<%= image_tag current_user.avatar.reverse.first, class: "img-fluid profile-avatar" %>
+											<% else %>
+											<img src="<%= asset_path('default_avatar.png')%>" alt="default_avatar">
+											<% end %>
+										</aside>
+										<aside class="right">
+											<%= form_for(@comment, :url => comments_path,:remote => true )do | f | %>
+											<%= f.hidden_field :post_id, :value => "#{@post.id}" %>
+											<%= f.text_field :commentary, placeholder: "say something", class: 'form-control right-input' %>
+											<%= f.submit :send, class: 'd-none' %>
+											<% end %>
+										</aside>
+								</div><br>
+								<% @post.comments.each do | com | %>
+								<div class="commentary-box d-flex justify-content-between p-2">
 
-							<span>
-								<% if com.commentator.avatar.attached? %>
-								<%= image_tag com.commentator.avatar.reverse.first, class: "img-fluid profile-avatar" %>
-								<% else %>
-								<img src=" <%= asset_path('default_avatar.png')%>" alt="default_avatar">
-								<% end %>
-							</span>
-=======
+									<span>
+										<% if com.commentator.avatar.attached? %>
+										<%= image_tag com.commentator.avatar.reverse.first, class: "img-fluid profile-avatar" %>
+										<% else %>
+										<img src=" <%= asset_path('default_avatar.png')%>" alt="default_avatar">
+										<% end %>
+									</span>
+									=======
 									<a href="#">
 										<%= p.author.names.capitalize %>
 									</a>
@@ -111,7 +110,7 @@
 									<div class="text-content p-1 mt-1">
 										<p><%= p.postcontent[0..50]%><%= link_to '...more', post_path(p.id) %></p>
 									</div>
->>>>>>> 8c66012e77e07cc8fcd172bcefe25d7582c00772
+									>>>>>>> 8c66012e77e07cc8fcd172bcefe25d7582c00772
 
 									<% else %>
 
