--- a/app/views/components/_navi.html.erb
+++ b/app/views/components/_navi.html.erb
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg fixed-top" id="navi">
-	<a href="<%= root_path%>" class="brand"><i>Link up</i></a>
+	<a href="<%= root_path%>" id="logoI"><i>Link up</i></a>
 
 	<form class="form-inline" method='get' action="<%= search_path(:search) %>">
 		<div class="input-group">
@@ -57,7 +57,7 @@
 			<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
 				aria-haspopup="true" aria-expanded="false">
 			</a>
-			<div class="dropdown-menu " aria-labelledby="navbarDropdown">
+			<div class="dropdown-menu position-absolute settings" aria-labelledby="navbarDropdown">
 				<a class="dropdown-item" href="#">Advertising facebook</a>
 				<div class="dropdown-divider"></div>
 				<a class="dropdown-item" href="#">Activity log</a>
