--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -27,7 +27,8 @@
 							<div class="card-body">
 
 								<!-- Button trigger modal -->
-								<button type="button" class="btn poster p-3" data-toggle="modal" data-target="#exampleModal">
+								<button type="button" class="btn poster p-3" data-toggle="modal"
+									data-target="#exampleModal">
 									What is on your mind ?
 								</button>
 							</div>
@@ -41,8 +42,8 @@
 
 
 					<!-- Modal -->
-					<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-						aria-hidden="true">
+					<div class="posting-modal modal fade" id="exampleModal" tabindex="-1" role="dialog"
+						aria-labelledby="exampleModalLabel" aria-hidden="true">
 						<div class="modal-dialog" role="document">
 							<div class="modal-content">
 								<%= form_for(:post, url: posts_path) do |f| %>
@@ -62,7 +63,7 @@
 									</div>
 								</div>
 								<div class="modal-footer">
-									<%= f.submit "post" ,class: "btn btn-primary postBut" %>
+									<%= f.submit "post" ,class: "btn btn-secondary postBut" %>
 								</div>
 								<% end %>
 							</div>
