--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -39,7 +39,7 @@
 					</div>
 
 					<!-- Modal -->
-					<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog"
+					<div class="posting-modal modal fade" id="exampleModal" tabindex="-1" role="dialog"
 						aria-labelledby="exampleModalLabel" aria-hidden="true">
 						<div class="modal-dialog" role="document">
 							<div class="modal-content">
@@ -62,7 +62,7 @@
 									</div>
 								</div>
 								<div class="modal-footer">
-									<%= f.submit "post" ,class: "btn btn-primary postBut" %>
+									<%= f.submit "post" ,class: "btn btn-secondary postBut" %>
 								</div>
 								<% end %>
 							</div>
