--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -3,8 +3,8 @@
 
 .navbar{
     background: #000000;
-    box-shadow: inset 0 0 10px #000000;
+    box-shadow: 0 8px 6px -6px black;
 }
 #navi{
-    box-shadow: inset 0 0 10px #000000;
+     box-shadow: 0 8px 6px -6px black;
 }
