--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -38,6 +38,10 @@ body{
     height: 800px;
     border: 1px solid red;
 }
+.text-content{
+    font-family: 'Tangerine', serif;
+    font-size: 35px;
+}
 .sect{
     width: 100%;
     height: 200px;
@@ -86,7 +90,8 @@ img[alt='suggested-page-image-logo']{
 }
 
 .chats{
-    height: 400px;
+    width: 100%;
+    padding: 5px;
     border: 1px solid goldenrod;
     box-shadow: inset 0 0 10px #000000;
 }
