--- a/app/views/components/_flash.html.erb
+++ b/app/views/components/_flash.html.erb
@@ -1,6 +1,6 @@
 <div class="mx-auto fixed-bottom" style="width: 300px;">
   <% flash.each do |message_type,message| %>
   <div class="space"></div>
-  <div class="alert alert-<%=message_type%>"><%=message%></div>
+  <div class="alert alert-<%=message_type%> text-light"><%=message%></div>
   <%end%>
 </div>
